[gd_scene load_steps=12 format=2]

[ext_resource path="res://Objects/Elf/Elf.gd" type="Script" id=1]
[ext_resource path="res://Objects/Elf/sprites/elf-spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Objects/Elf/HP/HPBar_Under.png" type="Texture" id=4]
[ext_resource path="res://Objects/Elf/HP/HPBar_bar.png" type="Texture" id=5]
[ext_resource path="res://Objects/Elf/HP/HPBar_Over.png" type="Texture" id=6]
[ext_resource path="res://Fonts/SHPinsher_16.tres" type="DynamicFont" id=7]
[ext_resource path="res://Sounds/bow_shot.wav" type="AudioStream" id=8]

[sub_resource type="Animation" id=5]
resource_name = "ElfIdle"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ElfShootStandingAnimation"
length = 0.61
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.05, 0.06, 0.11, 0.16, 0.21, 0.26, 0.31, 0.36, 0.41, 0.46, 0.51, 0.56, 0.61 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 3, 1 ), Vector2( 4, 1 ), Vector2( 5, 1 ), Vector2( 6, 1 ), Vector2( 7, 1 ), Vector2( 8, 1 ), Vector2( 9, 1 ), Vector2( 10, 1 ), Vector2( 11, 1 ), Vector2( 12, 1 ), Vector2( 13, 1 ), Vector2( 14, 1 ), Vector2( 14, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.06, 0.61 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_arrow"
}, {
"args": [  ],
"method": "arrow_reloaded"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 2, 2 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 62, 42 )

[node name="Elf" type="Area2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.132431, -39 )
scale = Vector2( 1.23382, 1.32713 )
z_index = 1
texture = ExtResource( 2 )
vframes = 3
hframes = 15
frame = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/ElfIdle = SubResource( 5 )
anims/ElfShootStandingAnimation = SubResource( 6 )
anims/ElfWalkAnimation = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -38 )
shape = SubResource( 1 )

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( 34, -61 )

[node name="DwarfRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, -38 )
enabled = true
cast_to = Vector2( 800, 0 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="HP" type="Node2D" parent="."]
position = Vector2( 0, -104 )

[node name="HPBar_Under" type="Sprite" parent="HP"]
texture = ExtResource( 4 )

[node name="HPBar" type="TextureProgress" parent="HP"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -18.0
margin_top = -2.0
margin_right = 22.0
margin_bottom = 2.0
value = 100.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar_over" type="Sprite" parent="HP"]
texture = ExtResource( 6 )

[node name="HPLabel" type="Label" parent="HP"]
margin_left = -60.0
margin_top = -27.0
margin_right = 60.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0
